# ai-trading-agent

./: .env.example  .gitignore  README.md  app_shared.py  demo.ps1  mcp-connect.ps1  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: index.html
docs/examples/: sample-session.html  sample-session.json  v6-flagship-session.html  v6-flagship-session.json  v8-nexustrade-mcp-session.html  v8-nexustrade-mcp-session.json
pages/: 1_🤖_Run_Agent.py  2_🧪_Backtest.py  3_🔬_Param_Sweep.py  4_📊_Paper_Trade.py  5_📜_Sessions.py  6_🗂️_Strategies.py
strategies/: filings_sentiment.py  filings_sentiment_llm.py  news_sentiment.py  rsi_mean_rev.py  sma_cross.py
tests/: test_agent_loop.py  test_agent_mcp.py  test_agent_memory.py  test_agent_report.py  test_agent_tools.py  test_agent_v3.py  test_backtest.py  test_filings.py  test_llm_analyzer.py  test_news_sentiment.py  test_paper.py  test_param_sweep.py  test_rigor.py
trading_agent/: cli.py  config.py
trading_agent/agent/: loop.py  mcp_client.py  memory.py  pricing.py  prompts.py  replay.py  report.py  stats.py  tools.py
trading_agent/backtest/: engine.py  metrics.py  rigor.py  runner.py
trading_agent/broker/: alpaca.py  paper_runner.py
trading_agent/core/: events.py  orders.py  portfolio.py  strategy.py
trading_agent/data/: edgar_source.py  news_source.py  yfinance_source.py
trading_agent/llm/: filing_analyzer.py
