[project]
name = "trading-agent"
version = "0.1.0"
description = "Backtest + paper trading platform with pluggable strategies"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
trading-agent = "trading_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trading_agent*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
